# contradots-hackathon-project

./: .coverage  API_DOCUMENTATION.md  README.md  abi.json  coverage-application.xml  db.sqlite3  environment.yml  infrastructure-requirements.txt  manage.py  payload.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_api.py
.github/workflows/: application-layer-ci.yml  domain-model-ci.yml
Docs/: Application Layer.puml  Core Domain Model.puml  Developer Package README.md  Presentation Layer.puml  UI Specification - Simple.md
contracts/: ActivityActionTracker.sol  ReputationTracker.sol
social-score/: index.html  package-lock.json  package.json
social_scoring_project/: __init__.py  settings.py  urls.py  wsgi.py
src/application/: __init__.py
src/application/commands/: __init__.py  authentication_commands.py  create_activity_command.py  deactivate_activity_command.py  register_person_command.py  submit_action_command.py  validate_proof_command.py
src/application/dtos/: __init__.py  action_dto.py  activity_details_dto.py  activity_dto.py  authentication_dtos.py  leaderboard_dto.py  person_profile_dto.py
src/application/events/: __init__.py  event_handler.py  event_publisher.py  event_store.py
src/application/handlers/: __init__.py  (+7 more)
src/domain/: __init__.py
src/infrastructure/: README.md  __init__.py
src/presentation/: README.md  __init__.py  api_documentation.py  api_examples.py  app.py  schemas.py  urls.py
src/viteReact/: package-lock.json  package.json  sandbox.html
tests/: __init__.py
tests/application/: __init__.py
tests/domain/: __init__.py
tests/infrastructure/: test_comprehensive_authentication.py
tests/presentation/: test_authentication_api.py  test_authentication_api_old.py
(+147 files in other folders)
